# paydirt

./: .gitignore  AGENTS.md  AI_STUDY_PLAN.md  BETA_TESTER_AGREEMENT.md  LICENSE  PAT_STE_ai.json  README.md  RELEASE_NOTES.md  __main__.spec  extract_charts.py  fix_pat_column.py  paydirt.spec  paydirt_dir.spec  paydirt_onefile.spec  paydirt_runner.py  pyproject.toml  requirements.txt  run_all_games.py  run_all_games_output2.txt  run_simulations.py  simulation_results.json  test_game_structure.py
.venv310/: pyvenv.cfg
paydirt/: __init__.py  __main__.py  ai_analysis.py  ai_save.py  auto_game.py  chart_loader.py  cli.py  cli_charts.py  commentary.py  computer_ai.py  game.py  game_engine.py  game_state.py  interactive_game.py  models.py  overtime_rules.py  packaging.py  penalty_handler.py  play_events.py  play_resolver.py  priority_chart.py  result_formatter.py  save_game.py  season_rules.py  simulate_week.py  standings.py  team_charts.py  teams.py  transaction_display.py  utils.py
paydirt-web/: AGENTS.md  IMPLEMENTATION_PLAN.md  README.md  start.bat  start.sh
tests/: __init__.py  conftest.py  run_all_games.py  simulate_special_plays.py  test_ai_analysis.py  test_ai_save.py  test_auto_game.py  test_chart_loader.py  test_cli.py  test_cli_charts.py  test_cli_functions.py  test_clock_management_fixes.py  test_column_resolvers.py  test_commentary.py  test_computer_ai.py  test_conversion.py  test_cpu_timeout.py  test_defensive_defaults.py  test_display_play_result.py  test_double_foul_penalties.py  test_end_zone.py  test_field_goal.py  test_fourth_down.py  test_fumble.py  (+45 more)
(+458 files in other folders)
