[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paydirt"
version = "1.0.0"
description = "A Python simulation of the classic Paydirt football board game"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["pyyaml"]
license = {text = "MIT"}
authors = [
    {name = "Paydirt Fan", email = "fan@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Board Games",
]

[project.scripts]
paydirt = "paydirt.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
filterwarnings = [
    "ignore::DeprecationWarning:fastapi.*",
    "ignore::DeprecationWarning:starlette.*",
    "ignore::DeprecationWarning:uvicorn.*",
]

[tool.coverage.run]
source = ["paydirt"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
